ingress/curly-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curly
  template:
    metadata:
      labels:
        app: curly
    spec:
      containers:
        - image: "reselbob/pinger:v2.1"
          imagePullPolicy: Always
          name: curly
          ports:
            - containerPort: 3000
