ingress/larry-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: larry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: larry
  template:
    metadata:
      labels:
        app: larry
    spec:
      containers:
        - image: "reselbob/pinger:v2.1"
          imagePullPolicy: Always
          name: larry
          ports:
            - containerPort: 3000
