ingress/moe-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moe
  template:
    metadata:
      labels:
        app: moe
    spec:
      containers:
        - image: "reselbob/pinger:v2.1"
          imagePullPolicy: Always
          name: moe
          ports:
            - containerPort: 3000
